syntax = "proto3";

package book.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "book/v1/rpc_get_books.proto";

option go_package = "github.com/wizlif/tempmee_assignment/book/v1";

service BookService {
  rpc GetBooks(GetBooksRequest) returns (GetBooksResponse) {
    option (google.api.http) = {
      get: "/v1/books"
      response_body:"books"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      description: "Use this API to get a list of all books";
      summary: "Get books";
    };
  }
}
